Updated the package name (fr.xgouchet.texteditor -> fr.xgouchet.ted)
Signed-off-by: Xavier Gouchet <xavier.gouchet@gmail.com>

--- a/eclipse-project/res/values-fr/arrays.xml
+++ b/eclipse-project/res/values-fr/arrays.xml
@@ -7,6 +7,7 @@
         <item>Negatif</item>
         <item>Matrix</item>
         <item>Ciel Bleu</item>
+        <item>Virus</item>
     </string-array>
 
 </resources>
