--- a/eclipse-project/res/layout/layout_editor.xml
+++ b/eclipse-project/res/layout/layout_editor.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <fr.xgouchet.texteditor.ui.view.AdvancedEditText
+    <fr.xgouchet.ted.ui.view.AdvancedEditText
         android:id="@+id/editor"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -18,7 +18,7 @@
         android:typeface="monospace" >
 
         <requestFocus />
-    </fr.xgouchet.texteditor.ui.view.AdvancedEditText>
+    </fr.xgouchet.ted.ui.view.AdvancedEditText>
 
     <LinearLayout
         android:id="@+id/searchLayout"
