--- a/eclipse-project/res/values-fr/arrays.xml
+++ b/eclipse-project/res/values-fr/arrays.xml
@@ -7,7 +7,7 @@
         <item>Negatif</item>
         <item>Matrix</item>
         <item>Ciel Bleu</item>
-        <item>Virus</item>
+        <item>Dracula</item>
     </string-array>
 
 </resources>
