--- a/eclipse-project/res/values/arrays.xml
+++ b/eclipse-project/res/values/arrays.xml
@@ -7,7 +7,7 @@
         <item>Negative</item>
         <item>Matrix</item>
         <item>Sky</item>
-        <item>Virus</item>
+        <item>Dracula</item>
     </string-array>
     <string-array name="color_theme_values">
         <item>0</item>
