--- a/eclipse-project/res/values-fr/toasts.xml
+++ b/eclipse-project/res/values-fr/toasts.xml
@@ -16,19 +16,15 @@
     <string name="toast_save_delete">"Impossible de sauvegarder (erreur lors de la copie du fichier temporaire)"</string>
     <string name="toast_save_rename">"Impossible de sauvegarder (erreur lors de la copie du fichier temporaire)"</string>
     <string name="toast_save_success">Fichier sauvegardé</string>
-    <string name="toast_io_exception">"Erreur lors de l'ouverture du dossier"</string>
     <string name="toast_folder_doesnt_exist">"Impossible d'ouvrir, ce dossier n'existe pas"</string>
     <string name="toast_folder_not_folder">"Impossible d'ouvrir, ce n'est pas un dossier"</string>
     <string name="toast_folder_cant_read">"Impossible d'ouvrir, le dossier est protégé en lecture"</string>
     <string name="toast_folder_cant_write">"Impossible d'utiliser ce dossier car il est protégé en écriture"</string>
-    <string name="toast_file_null">"Impossible d'ouvrir, le fichier n'existe pas"</string>
-    <string name="toast_file_not_file">"CImpossible d'ouvrir, ce n'est pas un fichier"</string>
     <string name="toast_file_cant_read">"Impossible d'ouvrir, le fichier est protégé en lecture"</string>
-    <string name="toast_filename_empty">"Impossible d'enregistrer un fichier sans nom"</string>
-    <string name="toast_recent_removed">"Le fichier n'existe plus et a été retiré de la liste des documents récents"</string>
     <string name="toast_search_not_found">"Pas de résultat dans ce fichier"</string>
     <string name="toast_search_eof">"Pas d'autre résultat dans ce fichier"</string>
     <string name="toast_search_no_input">"Recherche vide"</string>
     <string name="toast_no_market">"L'application Market n'est pas présente sur cet appareil"</string>
+    <string name="toast_filename_empty">Le nom de fichier ne doit pas être vide</string>
 
 </resources>
