--- a/eclipse-project/res/values-fr/history.xml
+++ b/eclipse-project/res/values-fr/history.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+<string name="release12">1.2 (18 avr. 2012)</string>
+    <string name="release12_log">"- Correction du bug de défilement depuis la dernière MAJ\n
+- correction de l'option défilement rapide (l'option restait activée quelle que soit la valeur dans les préferences)"</string>
     <string name="release11">1.1 (10 avr. 2012)</string>
     <string name="release11_log">"- Correction du crash du à la dernière mise à jour\n
 - Ajout d'un défilement par lancé (pour naviguer dans les longs fichiers)\n
