--- a/eclipse-project/res/values/history.xml
+++ b/eclipse-project/res/values/history.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="release12">1.2 (18 apr. 2012)</string>
+    <string name="release12_log">"- Fixed the scroll bug since last update\n
+- fixed the fling options in the settings (option was always active)"</string>
     <string name="release11">1.1 (10 apr. 2012)</string>
     <string name="release11_log">"- Fixed the crash at start caused by the last update\n
 - Added Fling to Scroll (launches the scroll to navigate in large files)\n
