--- a/eclipse-project/res/layout/layout_about.xml
+++ b/eclipse-project/res/layout/layout_about.xml
@@ -90,6 +90,18 @@
             style="@style/TedSubTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/release13" />
+
+        <TextView
+            style="@style/TedContent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/release13_log" />
+
+        <TextView
+            style="@style/TedSubTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/release12" />
 
         <TextView
