--- a/eclipse-project/res/values-fr/history.xml
+++ b/eclipse-project/res/values-fr/history.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<string name="release12">1.2 (18 avr. 2012)</string>
+
+    <string name="release13">1.3 (5 mai 2012)</string>
+    <string name="release13_log">"- Ajout d'une option Annuler\n
+- Optimisation des performances"</string>
+    <string name="release12">1.2 (18 avr. 2012)</string>
     <string name="release12_log">"- Correction du bug de défilement depuis la dernière MAJ\n
 - correction de l'option défilement rapide (l'option restait activée quelle que soit la valeur dans les préferences)"</string>
     <string name="release11">1.1 (10 avr. 2012)</string>
