--- a/eclipse-project/res/values/history.xml
+++ b/eclipse-project/res/values/history.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <string name="release13">1.3 (5 may 2012)</string>
+    <string name="release13_log">"- Added an undo option (check the settings)\n
+- Added some performance tweaks"</string>
     <string name="release12">1.2 (18 apr. 2012)</string>
     <string name="release12_log">"- Fixed the scroll bug since last update\n
 - fixed the fling options in the settings (option was always active)"</string>
