--- a/Ted/res/values-fr/history.xml
+++ b/Ted/res/values-fr/history.xml
@@ -2,18 +2,31 @@
 <resources>
 
     <!-- FR -->
+    <!--  -->
+    <string name="release18">1.8 (10 nov 2012)</string>
+    <string name="release18_log">"- Bug fixed : problèmes avec la sauvegarde du dernier fichier ouvert 
+- Mise a jour du système de notifications
+- Possibilité de changer la police d'écriture utilisée par l'éditeur (Vous pouvez importer n'importe quel fichier TTF situé sur l'appareil et/ou la carte mémoire)"</string>
+
+    <!--  -->
     <string name="release17">1.7 (16 juillet 2012)</string>
     <string name="release17_log">"- Correction de bug lors de la sauvegarde sur certains appareils \n
 - Option pour désactiver la sauvegarde automatique sur les fichiers existants \n"</string>
+
+    <!--  -->
     <string name="release16">1.6 (9 juillet 2012)</string>
     <string name="release16_log">"- Ajout de la sauvegarde automatique \n
 - correction de la recherche sensible à la casse \n"</string>
+
+    <!--  -->
     <string name="release15">1.5 (21 juin 2012)</string>
     <string name="release15_log">"- Adaptation à Ice Cream Sandwich \n
 - Amélioration de l'option Annuler (bugs avec les suggestions) \n
 - Ajout d'un widget (raccourci vers un fichier)\n
 - Ajout d'une option pour ouvrir automatiquement un fichier favori au démarrage de l'application\n
 - Refonte graphique (nouveaux icones réalisés par votre serviteur ^^) \n"</string>
+
+    <!--  -->
     <string name="release13">1.3 (5 mai 2012)</string>
     <string name="release13_log">"- Ajout d'une option Annuler\n
 - Optimisation des performances"</string>
