--- a/Ted/res/layout/layout_save_as.xml
+++ b/Ted/res/layout/layout_save_as.xml
@@ -4,21 +4,28 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <EditText
+        android:id="@+id/editFileName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/folder_rw"
+        android:drawablePadding="8dp"
+        android:ems="10"
+        android:hint="@string/ui_hint_file_name"
+        android:inputType="text" />
+
+    <RadioButton
+        android:id="@+id/readonly"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Read-Only" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal" >
 
-        <EditText
-            android:id="@+id/editFileName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/folder_rw"
-            android:drawablePadding="8dp"
-            android:hint="@string/ui_hint_file_name"
-            android:inputType="text" >
-        </EditText>
     </LinearLayout>
 
     <ListView
