--- a/Ted/res/values/toasts.xml
+++ b/Ted/res/values/toasts.xml
@@ -18,8 +18,8 @@
     <string name="toast_save_delete">Unable to save (error while copying temp file to save location)</string>
     <string name="toast_save_rename">Unable to save (error while copying temp file to save location)</string>
     <string name="toast_save_success">File saved</string>
-    <string name="toast_folder_cant_write">"Can't use this folder cause it isn't writeable"</string>
-    <string name="toast_file_cant_read">"Can't use this file cause it isn't readable"</string>
+    <string name="toast_folder_cant_write">"Can't use this folder because it isn't writeable"</string>
+    <string name="toast_file_cant_read">"Can't use this file because it isn't readable"</string>
     <string name="toast_search_not_found">No match was found in the current file</string>
     <string name="toast_search_eof">No more match found in the current file</string>
     <string name="toast_search_no_input">Type a text to search in the search bar</string>
@@ -27,7 +27,7 @@
     <string name="toast_warn_no_undo">Nothing to undo anymore.</string>
     <string name="toast_warn_no_undo_will_quit">Nothing to undo anymore. Press Back one more time to quit. </string>
     <string name="toast_open_home_page_error">Default file not found, try setting a new one in the settings.</string>
-    <string name="toast_home_page_cant_read">"Can't open default file cause it isn't readable"</string>
+    <string name="toast_home_page_cant_read">"Can't open default file because it isn't readable"</string>
     <string name="toast_widget_select">Select a file to associate with this new widget</string>
     <string name="toast_open_select">Select a file to open</string>
     <string name="toast_home_page_select">Select a file to open when you launch Ted from your home screen</string>
